Alteração no opacity no styles.css e alteraçao no index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Oswald&family=Poppins:wght@400;500;700&family=Roboto:wght@400;700&display=swap"
         rel="stylesheet">
-    <title>DevClub - Sorteios</title>
+    <title>DevClub - Sorteio</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
